# open-sol-bot

./: Makefile  README.md  docker-compose.yaml
app/cache-preloader/: Dockerfile  README.md
app/cache-preloader/cache_preloader/: __init__.py  main.py
app/cache-preloader/cache_preloader/caches/: __init__.py  blockhash.py  min_balance_rent.py
app/cache-preloader/cache_preloader/core/: __init__.py  base.py  protocols.py
app/cache-preloader/cache_preloader/services/: __init__.py  auto_update_service.py
app/tg-bot/: Dockerfile  pyproject.toml
app/tg-bot/tg_bot/: __init__.py  decorators.py  main.py  templates.py
app/tg-bot/tg_bot/conversations/: states.py
app/tg-bot/tg_bot/conversations/admin/: command.py
app/tg-bot/tg_bot/conversations/asset/: command.py  render.py  router.py
app/tg-bot/tg_bot/conversations/copytrade/: create.py  edit.py  menu.py  tp_sl.py
app/tg-bot/tg_bot/conversations/home/: command.py  render.py  router.py
app/tg-bot/tg_bot/conversations/monitor/: create.py  edit.py  menu.py
app/tg-bot/tg_bot/conversations/setting/: menu.py  template.py
app/tg-bot/tg_bot/conversations/swap/: command.py  swap.py
app/tg-bot/tg_bot/conversations/wallet/: menu.py  render.py
app/tg-bot/tg_bot/keyboards/: asset.py  common.py  copytrade.py  main_menu.py  monitor.py  notify_swap.py  setting.py  swap.py  wallet.py
app/tg-bot/tg_bot/middlewares/: authorization.py  error_handler.py  initialize.py
app/tg-bot/tg_bot/notify/: __init__.py  copytrade_trigger.py  notify.py  smart_swap.py  swap_result.py
app/tg-bot/tg_bot/services/: activation.py  copytrade.py  monitor.py  user.py
app/tg-bot/tg_bot/utils/: message.py  solana.py  swap.py
app/trading/: Dockerfile  pyproject.toml
app/trading/trading/: copytrade.py  executor.py  main.py  swap.py  utils.py
app/trading/trading/settlement/: __init__.py  analyzer.py  processor.py
app/trading/trading/transaction/: base.py  factory.py  protocol.py  sender.py
app/trading/trading/transaction/builders/: base.py  gmgn.py  jupiter.py  pump.py  ray_v4.py
app/wallet-tracker/: Dockerfile  pyproject.toml
app/wallet-tracker/wallet_tracker/: __init__.py  main.py  tx_monitor.py  tx_worker.py
app/wallet-tracker/wallet_tracker/benchmark/: decorator.py
app/wallet-tracker/wallet_tracker/geyser/: tx_subscriber.py
app/wallet-tracker/wallet_tracker/parser/: pump.py  raw_tx.py
app/wallet-tracker/wallet_tracker/wss/: account_log_monitor.py  tx_subscriber.py
libs/cache/solbot_cache/: account.py  constants.py  launch.py
libs/common/solbot_common/: constants.py  exceptions.py
libs/common/solbot_common/layouts/: bonding_curve_account.py  global_account.py
libs/common/solbot_common/types/: bot_setting.py
libs/services/solbot_services/: copytrade.py  holding.py
tests/cache/: test_rayv4.py
tests/common/utils/: test_pump_integration.py  test_utils.py
tests/trading/: conftest.py  test_executor.py  test_pump.py  test_route.py  test_utils.py
(+4 files in other folders)
